@@ -439,6 +439,25 @@ For a space with penetrating sunlight casting bright patches in a
 few places, it should be set to HIGH.
 The default value is "L".
 .TP
+.BR PGMAP
+This variable designates a global photon map to be generated by
+.I mkpmap(1)
+and used to accelerate rendering.
+The file name must be followed by the number of photons to be stored
+in the map, and this number may be followed by a bandwidth for rendering.
+There is no default value, meaning that a global photon map will not
+normally be created.
+.TP
+.BR PCMAP
+This variable designates a caustic photon map to be generated by
+.I mkpmap(1)
+and used during renderings to model light transmission by reflecting
+and refracting surfaces.
+The file name must be followed by the number of photons to be stored
+in the map, and this number may be followed by a bandwidth for rendering.
+There is no default value, meaning that a caustic photon map will not
+normally be created.
+.TP
 .BR OPTFILE
 This is the name of a file in which
 .I rad
@@ -485,6 +504,15 @@ If the first word of the first instance of this variable is not an option,
 it will be used in place of the default command path, "mkillum".
 See the
 .I rtrace(1)
+manual page for a list of valid options.
+.TP
+.BR mkpmap
+This variable may be used to specify additional options to
+.I mkpmap.
+If the first word of the first instance of this variable is not an option,
+it will be used in place of the default command path, "mkpmap".
+See the
+.I mkpmap(1)
 manual page for a list of valid options.
 .TP
 .BR render
@@ -691,7 +719,7 @@ accurately determine the ambient value for
 The use of upper and lower case naming for the standard views may be
 problematic on systems that don't distinguish case in filenames.
 .SH "SEE ALSO"
-glrad(1), make(1), mkillum(1), objview(1), oconv(1),
+glrad(1), make(1), mkillum(1), mkpmap(1), objview(1), oconv(1),
 pfilt(1), raddepend(1), ranimate(1),
 rholo(1), rpict(1), rpiece(1), rtrace(1), rvu(1),
 touch(1), vgaimage(1), ximage(1)
