@@ -876,4 +876,3 @@ Greg Ward
 .SH "SEE ALSO"
 getinfo(1), lookamb(1), mkpmap(1), oconv(1), pdfblur(1), pfilt(1), 
 pinterp(1), pmblur(1), printf(3), ra_rgbe(1), rad(1), rtrace(1), rvu(1)
-
