@@ -364,4 +364,5 @@ DISPLAY_GAMMA		the value to use for monitor gamma correction.
 .SH AUTHOR
 Greg Ward
 .SH "SEE ALSO"
-getinfo(1), lookamb(1), oconv(1), pfilt(1), rad(1), rpict(1), rtrace(1)
+getinfo(1), lookamb(1), mkpmap(1),
+oconv(1), pfilt(1), rad(1), rpict(1), rtrace(1)
